# vType

./: .gitignore  CHANGELOG.md  LICENSE  README.md  REQUIREMENTS.md  config.py  main.py  prompt.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
core/: __init__.py  audio.py  detector.py  manager.py  recognizer.py  typer.py
docs/: COMPLIANCE_AUDIT.md  OPTIMIZATION.md  STATUS.md
docs/impls/: impl-audio.md  impl-clipboard.md  impl-config.md  impl-detector.md  impl-key-monitor.md  impl-main.md  impl-recognizer.md  impl-typer.md
docs/specs/: feat-audio.md  feat-clipboard.md  feat-config.md  feat-detector.md  feat-key-monitor.md  feat-main.md  feat-manager.md  feat-recognizer.md  feat-typer.md
tests/: __init__.py  test_audio.py  test_clipboard.py  test_config.py  test_detector.py  test_key_monitor.py  test_main.py  test_manager.py  test_recognizer.py  test_typer.py
utils/: __init__.py  clipboard.py  key_monitor.py
